-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.4.2, 6.5.0
-
None
-
Windows 10, Microsoft Visual Studio 2019, Qt 6.4.2
-
-
c5bb9b105 (dev), 06526589b (6.5), f4f797843 (6.6), c92c897a7 (dev), 58a3cfe85 (dev), 9a5ccc89d (6.5), f79c30ee8 (6.5), 95b02db85 (6.6), e9e84e9d8 (6.6)
Qutlook Example (ActiveQt) example crashes with Qt 6.4.2 on Windows. The crash occurs while trying to obtain session:
Outlook::NameSpace session(outlook.Session());
- is blocked by
-
QTBUG-114797 QVariant::convert may crash even if QVariant::canConvert returns true
-
- Closed
-