src/activeqt/shared/qaxtypes.cpp
@@ -718,7 +718,10 @@ static QVariant axServer(IUnknown *unknown, const QByteArray &typeName)
 #undef QVARIANT_TO_VARIANT_POD
 
 /*
-    Returns \a arg as a QVariant of type \a type.
+    Returns \a arg as a QVariant of type \a typeName or \a type.
+
+    NOTE: If a \a typeName is specified, value type is assumed. to
+    get/create a pointer type, provide the type id in the \a type argument.
 
     Used by
 
@@ -933,24 +936,43 @@ QVariant VARIANTToQVariant(const VARIANT &arg, const QByteArray &typeName, int t
                 {
                     if (!typeName.isEmpty()) {
                         if (arg.vt & VT_BYREF) {
+                            // When the dispinterface is a return value, just assign it to a QVariant
                             static const int dispatchId = qRegisterMetaType<IDispatch**>("IDispatch**");
                             var = QVariant(QMetaType(dispatchId), &arg.ppdispVal);
                         } else {
 #ifndef QAX_SERVER
                             if (typeName == "QVariant") {
+                                // If a QVariant is requested, wrap the dispinterface in a QAxObject
                                 QAxObject *object = new QAxObject(disp);
                                 var = QVariant::fromValue<QAxObject*>(object);
                             } else if (typeName != "IDispatch*" &&  QMetaType::fromName(typeName).id() != QMetaType::UnknownType) {
-                                QByteArray typeNameStr = QByteArray(typeName);
+                                // Conversion from IDispatch* to a wrapper type is requested. Here, the requested
+                                // wrapper type is constructed around the dispinterface, and then returned as
+                                // a QVariant containing a pointer to the wrapper type.
+
+                                // Calculate the value type from a potential pointer type
+                                QByteArray valueTypeStr = QByteArray(typeName);
                                 int pIndex = typeName.lastIndexOf('*');
                                 if (pIndex != -1)
-                                    typeNameStr = typeName.left(pIndex);
-                                const QMetaType metaType = QMetaType::fromName(typeNameStr);
-                                Q_ASSERT(metaType.id() != QMetaType::UnknownType);
-                                auto object = static_cast<QAxObject*>(qax_createObjectWrapper(metaType.id(), disp));
-                                var = QVariant(metaType, &object);
+                                    valueTypeStr = typeName.left(pIndex);
+
+                                const QMetaType metaValueType = QMetaType::fromName(valueTypeStr);
+                                Q_ASSERT(metaValueType.id() != QMetaType::UnknownType);
+
+                                auto object = static_cast<QAxObject*>(qax_createObjectWrapper(metaValueType.id(), disp));
+
+                                // Return object as the original type
+                                const QMetaType returnType = QMetaType::fromName(typeName);
+                                Q_ASSERT(metaValueType.id() != QMetaType::UnknownType);
+
+                                var = QVariant(returnType, &object);
+
+                                // The result must be a pointer to an instance derived from QObject
+                                Q_ASSERT((var.metaType().flags() & QMetaType::PointerToQObject) != 0);
                             } else {
 #endif
+                                // An IDispatch pointer is requested, no conversion required, just return as QVariant
+                                // containing the pointer.
                                 static const int dispatchId = qRegisterMetaType<IDispatch*>(typeName.constData());
                                 var = QVariant(QMetaType(dispatchId), &disp);
 #ifndef QAX_SERVER
